[gd_scene load_steps=6 format=3 uid="uid://cpy0flbvigrsd"]

[ext_resource type="Script" path="res://Game/Game Menu/pause_menu.gd" id="1_0kagn"]
[ext_resource type="Theme" uid="uid://c1p00awktquis" path="res://Assets/Themes/pause_menu_button.tres" id="2_04br8"]
[ext_resource type="Texture2D" uid="uid://d1tllht6le8ot" path="res://Assets/Images/Menu Icons/reset_icon.png" id="2_331ra"]
[ext_resource type="Texture2D" uid="uid://b1tgjk34ta3k4" path="res://Assets/Images/Menu Icons/leave_icon.png" id="3_bkp30"]
[ext_resource type="Texture2D" uid="uid://ci0ivhny7g1ey" path="res://Assets/Images/Menu Icons/hamburger_icon.png" id="4_kdlrd"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(109, 0)
mouse_filter = 2
script = ExtResource("1_0kagn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 208.0
offset_bottom = 218.0
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MenuOpenButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_04br8")
toggle_mode = true
icon = ExtResource("4_kdlrd")
icon_alignment = 1

[node name="Menu" type="Control" parent="MarginContainer/VBoxContainer"]
visibility_layer = 2
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="PrevCountainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Menu/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Prev Button" type="Button" parent="MarginContainer/VBoxContainer/Menu/VBoxContainer/PrevCountainer"]
layout_mode = 2
theme = ExtResource("2_04br8")
icon = ExtResource("4_kdlrd")
alignment = 0
icon_alignment = 1

[node name="ResetContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Menu/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Reset Button" type="Button" parent="MarginContainer/VBoxContainer/Menu/VBoxContainer/ResetContainer"]
layout_mode = 2
theme = ExtResource("2_04br8")
icon = ExtResource("2_331ra")
alignment = 0
icon_alignment = 1

[node name="QuitContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Menu/VBoxContainer"]
layout_mode = 2

[node name="Quit Button" type="Button" parent="MarginContainer/VBoxContainer/Menu/VBoxContainer/QuitContainer"]
layout_mode = 2
theme = ExtResource("2_04br8")
icon = ExtResource("3_bkp30")
icon_alignment = 1

[connection signal="toggled" from="MarginContainer/VBoxContainer/MarginContainer/MenuOpenButton" to="." method="_on_menu_open_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu/VBoxContainer/PrevCountainer/Prev Button" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu/VBoxContainer/ResetContainer/Reset Button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu/VBoxContainer/QuitContainer/Quit Button" to="." method="_on_quit_button_pressed"]
